# git-pager

./: .headache.dirs  CHANGES.md  COPYING.HEADER  README.md  dune-project  dunolint  git-pager-dev.opam  git-pager-tests.opam  git-pager.opam  git-pager.opam.template  headache.sh  pageantty-dev.opam  pageantty-tests.opam  pageantty.opam  pageantty.opam.template
.github/workflows/: ci.yml  deploy-odoc.yml  dune-pkg-more-ci.yml  more-ci.yml  ocaml-4-ci.yml
example/: dune  main.ml
lib/git_pager/src/: dune  git_pager.ml  git_pager.mli
lib/git_pager/test/: dune  test__git_pager.ml  test__git_pager.mli
lib/git_pager_cli/src/: cmd__diff.ml  cmd__diff.mli  cmd__run.ml  dune  git_pager_cli.ml
lib/git_pager_cli/test/: dune
src/git-pager/: dune  git_pager.ml  git_pager.mli
test/cram/: diff.t  dune  print-settings.t  run.t
test/git-pager/: dune  test__git_pager.ml  test__git_pager.mli
test/git-pager-cli/src/: cmd__diff.ml  cmd__pager.ml  cmd__print_settings.ml  cmd__run.ml  cmd__run.mli  common_helpers.mli  dune  git_pager_cli.ml  import.ml  import.mli
test/git_pager_cli/src/: cmd__diff.ml  cmd__pager.ml  cmd__print_settings.ml  cmd__run.ml  common_helpers.ml  common_helpers.mli  dune  git_pager_cli.ml
