(library
 (name git_pager)
 (public_name pageantty.git-pager)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err)
 (libraries pp pplumbing-err pplumbing-pp-tty unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
