(library
 (name git_pager_cli)
 (public_name pageantty-tests.git_pager_cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Pplumbing_log
  -open
  Pplumbing_log_cli
  -open
  Stdio
  -open
  Cmdlang
  -open
  Volgo)
 (libraries
  base
  cmdlang
  fpath
  fpath-base
  git_pager
  pp
  pplumbing-err
  pplumbing-log
  pplumbing-log-cli
  pplumbing-pp-tty
  shexp.process
  stdio
  unix
  volgo
  volgo-git-unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
