(library
 (name git_pager_cli_test)
 (package pageantty-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Pplumbing_log
  -open
  Pplumbing_log_cli
  -open
  Cmdlang
  -open
  Volgo)
 (libraries
  cmdlang
  dyn
  fpath
  fpath-sexp0
  git_pager
  pp
  pplumbing-err
  pplumbing-log
  pplumbing-log-cli
  pplumbing-pp-tty
  shexp.process
  unix
  volgo
  volgo-git-unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
